# autbtg

./: Cargo.toml  TODO.md  design_file
src/: game.rs  ivec2.rs  lib.rs  main.rs  render.rs
src/ability/: damage.rs  effect.rs  mod.rs  modified_ability.rs
src/entity/: mod.rs  spider.rs
src/ui/: boxx.rs  health_bars.rs  hud.rs  mod.rs  turn_bar.rs
