[package]
name = "autbgtg"
version = "0.1.0"
edition = "2021"
license = " GPL-3.0-only"
authors = ["Aviv 'RustyStriker' Romem <avivr903@tutanota.com>"]
categories = ["games"]
description = "An Unamed Turn Based Terminal Game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.6"
